# olowin_back

./: .env.example  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  docker-compose.yml  docker-compose.yml.old  main.py  pyproject.toml  requirements.txt  ui_server.py
.github/workflows/: test.yml
agent_plugins/: __init__.py  validator.py
agent_prompts/: __init__.py  promptilus_x.py
agents/: __init__.py  checkout_agent.py  eval_agent.py  omnicard_agent.py  recon_agent.py  result_analyzer.py  risk_assessor.py  router_agent.py
api/: server.py
auth/: jwt_auth.py
autobuyer_project/agents/: __init__.py
autobuyer_project/handlers/: __init__.py
autobuyer_project/utils/: __init__.py
backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/requirements/: ai.txt  base.txt  db.txt  dev.txt
backend/src/: dependencies.py  main.py
backend/src/api/: __init__.py  agents.py  auth.py  workflows.py
backend/src/db/: mongodb.py
backend/src/models/: __init__.py  agent.py  user.py  workflow.py
clients/: __init__.py  gemini_client.py  ollama_client.py
config/: __init__.py  config.yaml  metagpt_config.yaml
docker/: docker-compose.yml
docker/backend/: Dockerfile  requirements.txt
docker/config/mongodb/: init.js
docker/config/prometheus/: prometheus.yml
docker/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
docker/frontend/src/: App.tsx  main.tsx
docker/scripts/: backup.sh  init.ps1  init.sh  restore.sh
examples/: 07_custom_llm_config.py
examples/autobuyer_project/: __init__.py  config.yaml  requirements.txt
examples/autobuyer_project/agents/: __init__.py
examples/autobuyer_project/handlers/: __init__.py  browser_handler.py  proxy_handler.py
examples/autobuyer_project/utils/: __init__.py  utils.py
examples/synthetic_identity_project/: __init__.py
examples/synthetic_identity_project/agents/: __init__.py
examples/synthetic_identity_project/tools/: __init__.py
frontend/: .eslintrc.json  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  railway.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/components/: ChainLog.tsx  Footer.tsx  Navbar.tsx
frontend/src/pages/: Dashboard.tsx  Home.tsx  NotFound.tsx
frontend/static/: script.js  style.css
loggers/: __init__.py  dataset_logger.py
memory/: __init__.py  chromadb_controller.py
metagpt/: __init__.py
metagpt/actions/: __init__.py  omni_card_action.py
metagpt/agents/: __init__.py  auto_eval_agent.py  omni_card_agent.py
metagpt/tools/: __init__.py  omni_card_tool.py
metagpt_integration/: __init__.py  metagpt_runner.py
monitoring/: docker-compose.yml  prometheus.yml
monitoring/prometheus/: prometheus.yml
scripts/: cli_runner.py  fine_tune_trainer.py  run_metagpt_with_promptilus.py  train_config.json
server/: ws.py
static/: script.js  style.css
synthetic_identity_project/agents/: __init__.py
templates/: index.html
tests/: test_api.py
utils/: __init__.py  auth.py  db.py  feedback_loop.py  ip_filter.py  jwt_auth.py  logger.py  rate_limiter.py  vectordb.py
workflow/: __init__.py  condition_branch.py  graph_controller.py  memory_controller.py  pipeline_controller.py  state_schema.py
